--- a/src/main/resources/templates/budgets/all-budgets.html
+++ b/src/main/resources/templates/budgets/all-budgets.html
@@ -74,29 +74,60 @@
                 <div class="col-lg-12">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Tickets</h4>
-                            <div class="table-responsive m-t-40">
+                            <h4 class="card-title">Budgets</h4>
+                            <div class="m-t-40">
+                                <form th:action="@{/manager/budgets}" method="get" class="d-flex gap-2">
+                                    <div class="form-group mb-0 mr-2">
+                                        <label for="customerId" class="form-label">Customers</label>
+                                        <select id="customerId" name="customerId" class="form-select">
+                                            <option value="" selected>Select</option>
+                                            <option
+                                                    th:each="customer : ${customers}"
+                                                    th:value="${customer.customerId}"
+                                                    th:text="${customer.name}"
+                                                    th:selected="${customer.customerId == customerId}">
+                                            </option>
+                                        </select>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary align-self-end">Search</button>
+                                </form>
+                            </div>
+                            <div class="table-responsive">
                                 <table id="config-table" class="table display table-bordered table-striped no-wrap">
                                     <thead>
                                     <tr>
                                         <th>#</th>
-                                        <th>Subject</th>
-                                        <th>priority</th>
-                                        <th>Status</th>
-                                        <th>Employee Email</th>
-                                        <th>Employee name</th>
-                                        <th>Show</th>
+                                        <th>Designation</th>
+                                        <th>Total Budget</th>
+                                        <th>Budget Remaining</th>
+                                        <th>Start Date</th>
+                                        <th>Date End</th>
+                                        <th>Customer</th>
+                                        <th>Edit</th>
+                                        <th>Delete</th>
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr th:if="${tickets != null}" th:each="ticket : ${tickets}">
-                                        <td th:text="${ticket.ticketId}"></td>
-                                        <td th:text="${ticket.subject}"></td>
-                                        <td th:text="${ticket.priority}"></td>
-                                        <td th:text="${ticket.status}"></td>
-                                        <td th:text="${ticket.employee.email}"></td>
-                                        <td th:text="${ticket.employee.username}"></td>
-                                        <td><a th:href="${home} + 'customer/ticket/' + ${ticket.ticketId}"><i class="fas fa-eye"></i></a></td>
+                                    <tr th:if="${budgets != null}" th:each="budget : ${budgets}">
+                                        <td th:text="${budget.id}"></td>
+                                        <td th:text="${budget.designation}"></td>
+                                        <td th:text="${#numbers.formatDecimal(budget.budget, 1, 'COMMA', 2, 'POINT')}"></td>
+                                        <td th:text="${#numbers.formatDecimal(budget.remainingBudget, 1, 'COMMA', 2, 'POINT')}"></td>
+                                        <td th:text="${budget.dateMin}"></td>
+                                        <td th:text="${budget.dateMax}"></td>
+                                        <td th:text="${budget.customerId}"></td>
+                                        <td>
+                                            <a th:href="@{|${home}manager/budgets/edit/${budget.id}|}">
+                                                <i class="fas fa-edit"></i>
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <form th:action="@{|${home}manager/budgets/delete/${budget.id}|}" method="get">
+                                                <button type="submit" class="btn btn-primary">
+                                                    <i class="mdi mdi-delete"></i>
+                                                </button>
+                                            </form>
+                                        </td>
                                     </tr>
                                     </tbody>
                                 </table>
