--- a/src/main/resources/templates/budgets/create-budget.html
+++ b/src/main/resources/templates/budgets/create-budget.html
@@ -2,16 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:insert="~{/general/head.html}"></div>
-<meta name="_csrf" content="${_csrf.token}"/>
-<meta name="_csrf_header" content="${_csrf.headerName}"/>
 
 <!-- Editable CSS -->
-<link rel="stylesheet" type="text/css"
-      th:href="@{/css/dataTables.bootstrap4.css}">
-<link rel="stylesheet" type="text/css"
-      th:href="@{/css/responsive.dataTables.min.css}">
 
 <!-- Custom CSS -->
+<link th:href="@{/css/bootstrap-wysihtml5.css}" rel="stylesheet">
 <link th:href="@{/css/style.min.css}" rel="stylesheet">
 <!-- page css -->
 <link th:href="@{/css/pages/inbox.css}" rel="stylesheet">
@@ -74,33 +69,65 @@
                 <div class="col-lg-12">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Tickets</h4>
-                            <div class="table-responsive m-t-40">
-                                <table id="config-table" class="table display table-bordered table-striped no-wrap">
-                                    <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>Subject</th>
-                                        <th>priority</th>
-                                        <th>Status</th>
-                                        <th>Employee Email</th>
-                                        <th>Employee name</th>
-                                        <th>Show</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr th:if="${tickets != null}" th:each="ticket : ${tickets}">
-                                        <td th:text="${ticket.ticketId}"></td>
-                                        <td th:text="${ticket.subject}"></td>
-                                        <td th:text="${ticket.priority}"></td>
-                                        <td th:text="${ticket.status}"></td>
-                                        <td th:text="${ticket.employee.email}"></td>
-                                        <td th:text="${ticket.employee.username}"></td>
-                                        <td><a th:href="${home} + 'customer/ticket/' + ${ticket.ticketId}"><i class="fas fa-eye"></i></a></td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+                            <h4 class="card-title">Create New Budget</h4>
+                            <form th:object="${budget}" th:action="@{/manager/budgets/save}" method="post">
+
+                                <label class="m-t-20" for="designation">Designation:</label>
+                                <div class="input-group">
+                                    <input type="text" id="designation" th:field="*{designation}" class="form-control">
+                                </div>
+                                <div class="input-group">
+                                    <span class="text-danger font-weight-bold" th:if="${#fields.hasErrors('designation')}" th:errors="*{designation}"></span>
+                                </div>
+
+                                <label class="m-t-20" for="budget">Budget Amount:</label>
+                                <div class="input-group">
+                                    <input type="number" id="budget" th:field="*{budget}" class="form-control" step="0.01">
+                                </div>
+                                <div class="input-group">
+                                    <span class="text-danger font-weight-bold" th:if="${#fields.hasErrors('budget')}" th:errors="*{budget}"></span>
+                                </div>
+
+                                <label class="m-t-20" for="dateMin">Start Date:</label>
+                                <div class="input-group">
+                                    <input type="date" id="dateMin" th:field="*{dateMin}" class="form-control">
+                                </div>
+                                <div class="input-group">
+                                    <span class="text-danger font-weight-bold" th:if="${#fields.hasErrors('dateMin')}" th:errors="*{dateMin}"></span>
+                                </div>
+
+                                <label class="m-t-20" for="dateMax">End Date:</label>
+                                <div class="input-group">
+                                    <input type="date" id="dateMax" th:field="*{dateMax}" class="form-control">
+                                </div>
+                                <div class="input-group">
+                                    <span class="text-danger font-weight-bold" th:if="${#fields.hasErrors('dateMax')}" th:errors="*{dateMax}"></span>
+                                </div>
+
+                                <label class="m-t-20" for="status">Status:</label>
+                                <div class="input-group">
+                                    <select id="status" th:field="*{status}" class="form-control">
+                                        <option value="ACTIVE">Active</option>
+                                        <option value="INACTIVE">Inactive</option>
+                                        <option value="SOLD_OUT">Sold Out</option>
+                                    </select>
+                                </div>
+                                <div class="input-group">
+                                    <span class="text-danger font-weight-bold" th:if="${#fields.hasErrors('status')}" th:errors="*{status}"></span>
+                                </div>
+
+                                <label class="m-t-20" for="customerId">Customer:</label>
+                                <div class="input-group">
+                                    <select name="customerId" id="customerId" class="form-control">
+                                        <option th:each="customer : ${customers}" th:text="${customer.name}" th:value="${customer.customerId}"></option>
+                                    </select>
+                                </div>
+                                <div class="input-group">
+                                    <span class="text-danger font-weight-bold" th:if="${#fields.hasErrors('customerId')}" th:errors="*{customerId}"></span>
+                                </div>
+
+                                <button type="submit" class="btn btn-primary m-t-20">Create Budget</button>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -157,12 +184,14 @@
 <!--Custom JavaScript -->
 <script th:src="@{/js/library/custom.min.js}" type="text/javascript">></script>
 <!-- Editable -->
-<script th:src="@{/js/library/jquery.dataTables.min.js}"></script>
-<script th:src="@{/js/library/dataTables.responsive.min.js}"></script>
+
+<script th:src="@{/js/library/wysihtml5-0.3.0.js}"></script>
+<script th:src="@{/js/library/bootstrap-wysihtml5.js}"></script>
 <script>
-    $('#config-table').DataTable({
-        responsive: true
+    $(document).ready(function() {
+        $('.textarea_editor').wysihtml5();
     });
 </script>
+
 </body>
 </html>
