--- a/src/main/resources/templates/general/left-sidebar.html
+++ b/src/main/resources/templates/general/left-sidebar.html
@@ -155,6 +155,18 @@
                     </ul>
                 </li>
 
+                <li th:if="${#authorization.expression('hasRole(''ROLE_MANAGER'')')}" class="nav-small-cap">--- Budgets</li>
+                <li th:if="${#authorization.expression('hasRole(''ROLE_MANAGER'')')}">
+                    <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)">
+                        <i class="fas fa-envelope"></i>
+                        <span class="hide-menu">Budgets</span>
+                    </a>
+                    <ul class="collapse">
+                        <li><a th:href="${home + 'manager/budgets'}">All Budgets</a></li>
+                        <li><a th:href="${home + 'manager/budgets/new'}">Create Budget</a></li>
+                    </ul>
+                </li>
+
                 <li class="nav-small-cap">--- Import CSV</li>
                 <li>
                     <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)">
