--- a/src/main/resources/templates/general/left-sidebar.html
+++ b/src/main/resources/templates/general/left-sidebar.html
@@ -167,6 +167,18 @@
                     </ul>
                 </li>
 
+                <li class="nav-small-cap">--- Expenses</li>
+                <li>
+                    <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)">
+                        <i class="fas fa-envelope"></i>
+                        <span class="hide-menu">Expenses</span>
+                    </a>
+                    <ul class="collapse">
+                        <li><a th:href="${home + 'manager/expenses'}">All Expenses</a></li>
+                        <li><a th:href="${home + 'manager/expenses/new'}">Create Expense</a></li>
+                    </ul>
+                </li>
+
                 <li class="nav-small-cap">--- Import CSV</li>
                 <li>
                     <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)">
