--- a/src/main/resources/templates/expenses/create-expense.html
+++ b/src/main/resources/templates/expenses/create-expense.html
@@ -37,7 +37,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Create New Expense</h4>
-                            <form th:object="${expense}" th:action="@{/manager/expenses/save}" method="post">
+                            <form th:object="${expense}" th:action="@{/employee/expenses/save}" method="post">
 
                                 <label class="m-t-20" for="amount">Amount:</label>
                                 <div class="input-group">
