--- a/src/main/resources/templates/general/left-sidebar.html
+++ b/src/main/resources/templates/general/left-sidebar.html
@@ -174,8 +174,8 @@
                         <span class="hide-menu">Expenses</span>
                     </a>
                     <ul class="collapse">
-                        <li><a th:href="${home + 'manager/expenses'}">All Expenses</a></li>
-                        <li><a th:href="${home + 'manager/expenses/new'}">Create Expense</a></li>
+                        <li><a th:href="${home + 'employee/expenses'}">All Expenses</a></li>
+                        <li><a th:href="${home + 'employee/expenses/new'}">Create Expense</a></li>
                     </ul>
                 </li>
 
