[API][TYPE TOTAL][Ticket][Expense] /api/totals/ticket - Returns the sum of all totalExpenseAmount /api/totals/ticket/details - Returns a list of all VTicketExpensesDetail entries

--- a/src/main/resources/templates/expenses/create-expense.html
+++ b/src/main/resources/templates/expenses/create-expense.html
@@ -112,7 +112,7 @@
                                                 <option value="">Select Lead</option>
                                                 <option th:each="lead : ${leads}"
                                                         th:value="${lead.leadId}"
-                                                        th:text="${lead.subject}">
+                                                        th:text="${lead.name}">
                                                 </option>
                                             </select>
                                         </div>
