--- a/src/main/resources/templates/general/left-sidebar.html
+++ b/src/main/resources/templates/general/left-sidebar.html
@@ -186,7 +186,7 @@
                         <span class="hide-menu">Import CSV</span>
                     </a>
                     <ul class="collapse">
-                        <li><a th:if="${#authorization.expression('hasRole(''ROLE_MANAGER'')')}" th:href="${home + 'import-csv'}">Roles</a></li>
+                        <li><a th:if="${#authorization.expression('hasRole(''ROLE_MANAGER'')')}" th:href="${home + 'manager/import'}">Import</a></li>
                     </ul>
                 </li>
             </ul>
